--- a/assets/styles/common.scss
+++ b/assets/styles/common.scss
@@ -21,16 +21,20 @@
     .about {
         margin-bottom: 0;
     }
+    .hidden-lg{
+        display: none !important;
+        z-index: 0;
+    }
 }
 
 @media screen and (max-width: 991px) {
     .navbar{
-        background-color: #232323;
-        max-height: 56px;
+        background-color: $nav-background;
         padding: 8px 16px;
         z-index: 9;
     }
 
+    .hidden-sm,
     .navbar.fixed-top .navbar-collapse {
         display: none !important;
         z-index: 0;
@@ -46,8 +50,13 @@
         display: -webkit-inline-box;
         text-align: center;
         .nav-item{
-            width: 50%;
+            width: 33.33%;
         }
+    }
+    
+    .fixed-top{
+        position: sticky;
+        top: auto;
     }
 }
 
