Theme changed dist files

--- a/assets/styles/abstracts/_variables.scss
+++ b/assets/styles/abstracts/_variables.scss
@@ -1,12 +1,24 @@
+
+$navbar-link-hover: #eca300;
+$green: #008000;
+$navy-blue: #000080;
+$white: #fff;
+$sky-blue: #1bb1e8;
+
+// initial theme colors
 $base:#fff !default;
 $body-background: #303030;
 $nav-background: #232323;
 $sky-blue: #1bb1e8;
-$navy-blue: #000080;
 $slate-gray: slategray;
-$navbar-link-hover: #eca300;
-$green: #008000;
 $gray: #dddddd;
+
+// second theme colors
+// $base:#333 !default;
+// $body-background: #ebe5e5;
+// $nav-background: #e6dcdc;
+// $slate-gray: rgb(26, 27, 27);
+// $gray: $base;
 
 /// Relative or absolute URL where all assets are served from
 $base-url: '/assets/' !default;
