--- a/assets/styles/components/_about.scss
+++ b/assets/styles/components/_about.scss
@@ -15,7 +15,7 @@
     
     p {
         font-size: 14px;
-        color: $gray;
+        color: $light-gray;
         line-height: 2;
         margin: 24px 0;
     }
@@ -26,5 +26,5 @@
 }
 
 .top-buffer {
-    padding-top: 80px;
+    padding-top: 40px;
 }
