--- a/assets/styles/components/_main-header.scss
+++ b/assets/styles/components/_main-header.scss
@@ -1,7 +1,6 @@
 .navbar-dark {
-  background: $nav-background;
+  background: transparent;
   display: flex;
-  max-height: 56px;  
   a {
     font-size: 12px;
     font-weight: 600;
