--- a/assets/styles/abstracts/_variables.scss
+++ b/assets/styles/abstracts/_variables.scss
@@ -7,11 +7,11 @@ $sky-blue: #1bb1e8;
 
 // initial theme colors
 $base:#fff !default;
-$body-background: #303030;
-$nav-background: #232323;
+$body-background: #252525;
+$nav-background: #2b2b2b;
 $sky-blue: #1bb1e8;
 $slate-gray: slategray;
-$gray: #dddddd;
+$light-gray: #c1c1c1;
 
 // second theme colors
 // $base:#333 !default;
