--- a/assets/styles/base/_base.scss
+++ b/assets/styles/base/_base.scss
@@ -13,13 +13,18 @@ body {
     position: relative;
     margin: 0 auto;
     color: $base !important;
+    overflow: auto;
     //background: $body-background;//url("/assets/images/background.png");
     background-color: $body-background;
     background-attachment: fixed;
     background-size: cover;
     -webkit-font-smoothing: antialiased;
-    overflow: auto;
     -webkit-overflow-scrolling: touch;
+    // -webkit-transform: scale(1,1);
+    // -moz-transform: scale(1,1);
+    // -ms-transform: scale(1,1);
+    // -o-transform: scale(1,1);
+    // transform: scale(1,1);
 }
 
 #main{
@@ -54,6 +59,15 @@ h1{
     line-height: 1.2;
 }
 
+h3 {
+    color: $light-gray;
+    font-size: 13px;
+    padding-top: 20px;
+    font-style: italic;
+    max-width: 80%;
+    line-height: 1.5em;
+}
+
 .left{
     text-align: left;
     padding-top: 30%;
@@ -86,7 +100,18 @@ h1{
 @keyframes fadeInDown {
     0% {
        opacity: 0;
-       transform: translateY(-20px);
+       transform: translateY(-25px);
+    }
+    100% {
+       opacity: 1;
+       transform: translateY(0);
+    }
+}
+
+@keyframes fadeInUp {
+    0% {
+       opacity: 0;
+       transform: translateY(25px);
     }
     100% {
        opacity: 1;
@@ -128,10 +153,21 @@ h1{
     animation-name: fadeInDown;
 }
 
+.fadeInUp{
+    -webkit-animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-duration: 1s;
+    animation-fill-mode: both ;
+    -webkit-animation-name: fadeInUp;
+    animation-name: fadeInUp;
+}
+
 .fadeIn {
     -webkit-animation-duration: 1s;
     -webkit-animation-fill-mode: both;
     animation-duration: 1s;
+    -webkit-animation-delay: 1s;
+    animation-delay: 1s;
     animation-fill-mode: both ;
     -webkit-animation-name: fadeIn;
     animation-name: fadeIn;
