build file changes

--- a/assets/styles/abstracts/_variables.scss
+++ b/assets/styles/abstracts/_variables.scss
@@ -4,6 +4,8 @@ $green: #008000;
 $navy-blue: #000080;
 $white: #fff;
 $sky-blue: #1bb1e8;
+$dark-gray: #545b62;
+$black: #000;
 
 // initial theme colors
 $base:#fff !default;
