--- a/assets/styles/common.scss
+++ b/assets/styles/common.scss
@@ -9,9 +9,51 @@
     'components/main-header',
     'components/about';
 
+
+
+@media screen and (min-width: 768px) {
+    .col-md{
+        flex-basis: 0;
+        -ms-flex-positive: 1;
+        flex-grow: 1;
+        max-width: 100%;
+    }
+
+    h1{
+        font-size: 46px;
+    }
+
+    h3 {
+        font-size: 16px;
+    }
+
+    .navbar {
+        padding: 0.5rem 4rem !important;
+    }
+    
+    .vertical-center{
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        left: 10%;
+    }
+    
+    .left {
+        padding-top: 0;
+    }
+
+    .top-buffer {
+        padding-top: 120px;
+    }
+
+    .btn-secondary {
+        margin-left: 20px;
+    }
+}
+
 @media screen and (min-width: 992px) {
     h1{
-        //letter-spacing: 1px;
+        letter-spacing: 1px;
     }
     
     #main{
@@ -21,9 +63,12 @@
     .about {
         margin-bottom: 0;
     }
+
     .hidden-lg{
         display: none !important;
         z-index: 0;
+        visibility: hidden;
+        opacity: 0;
     }
 }
 
@@ -38,11 +83,15 @@
     .navbar.fixed-top .navbar-collapse {
         display: none !important;
         z-index: 0;
+        visibility: hidden;
+        opacity: 0;
     }
 
     .navbar.fixed-bottom .navbar-collapse{
         display: inline-block !important;
         z-index: 1;
+        visibility: visible;
+        opacity: 10;
     }
 
     .navbar-nav{
@@ -58,36 +107,8 @@
         position: sticky;
         top: auto;
     }
-}
 
-@media screen and (min-width: 768px) {
-    .col-md{
-        flex-basis: 0;
-        -ms-flex-positive: 1;
-        flex-grow: 1;
-        max-width: 100%;
-    }
-
-    h1{
-        font-size: 46px;
-    }
-
-    .navbar {
-        padding: 0.5rem 4rem !important;
-    }
-    
-    .vertical-center{
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        left: 10%;
-        padding: 20px;
-        align-items: center!important;
-    }
-    .left {
-        padding-top: 0;
-    }
-    .top-buffer {
-        padding-top: 120px;
+    .left{
+        padding-top: 25%;
     }
 }
