--- a/assets/styles/base/_base.scss
+++ b/assets/styles/base/_base.scss
@@ -86,7 +86,7 @@ h3 {
 
 .homepage {
     .btn {
-        margin-top: 30px;
+        margin-top: 10px;
         color: $white;
     }
 
@@ -106,7 +106,7 @@ h3 {
 
     .btn-primary,
     .btn-secondary{
-        padding: 16px 30px;
+        padding: 16px;
         border-radius: 0;
         border: 1px;
         border-style: solid;
