--- a/assets/styles/components/_about.scss
+++ b/assets/styles/components/_about.scss
@@ -20,7 +20,7 @@
         margin: 24px 0;
     }
     a{
-        color: $navbar-link-hover;
+        color: $link;
         text-decoration: none;
     }
 }
