--- a/assets/styles/abstracts/_variables.scss
+++ b/assets/styles/abstracts/_variables.scss
@@ -5,23 +5,81 @@ $green: #008000;
 $navy-blue: #000080;
 $white: #fff;
 $sky-blue: #1bb1e8;
-$dark-gray: #545b62;
 $black: #000;
+$btn-sec-hov: transparent;
 
 // initial theme colors
-$base:#fff !default;
-$body-background: #252525;
-$nav-background: #2b2b2b;
-$sky-blue: #1bb1e8;
-$slate-gray: slategray;
-$light-gray: #eae6e6;
+// $base:#fff !default;
+// $body-background: #252525;
+// $nav-background: #2b2b2b;
+// $sky-blue: #1bb1e8;
+// $slate-gray: slategray;
+// $light-gray: #eae6e6;
+// $dark-gray: #545b62;
+// $btn-sec-hov: $dark-gray;
+// $highlight: $link;
 
 // second theme colors
 // $base:#333 !default;
 // $body-background: #ebe5e5;
 // $nav-background: #e6dcdc;
+// $sky-blue: #1bb1e8;
 // $slate-gray: rgb(26, 27, 27);
-// $gray: $base;
+// $light-gray: $base;
+// $dark-gray: #545b62;
+// $btn-sec-hov: transparent;
+// $highlight: $link;
+
+
+//third theme colors
+$base:#fff !default;
+$body-background: #066939;
+$nav-background: #2b2b2b;
+$sky-blue: #1bb1e8;
+$slate-gray: slategray;
+$light-gray: #eae6e6;
+$dark-gray: #545b62;
+$btn-sec-hov: $dark-gray;
+$highlight: $link;
+
+//fourth theme colors
+// $base:#01A355 !default;
+// $body-background: #066939;
+// $nav-background: #2b2b2b;
+// $sky-blue: #1bb1e8;
+// $slate-gray: slategray;
+// $light-gray: $base;
+// $dark-gray: #545b62;
+// $btn-sec-hov: $dark-gray;
+// $highlight: #002B16;
+
+// $theme-colors: (
+//   'primary': (
+//     'base': #384ea9,
+//     'body-background': #e4efff,
+//     'nav-background': #273677,
+//     'sky-blue': #273677,
+//     'slate-gray': #273677,
+//     'light-gray': #273677,
+//     'dark-gray': #545b62,
+//     'btn-sec-hov': #545b62
+//   ),
+//   'accent': (
+//     'base': #f08110,
+//     'light': #ff8100,
+//     'dark': #e47f17
+//   ),
+//   'foreground': (
+//     'base': #393939,
+//     'light': #6e6e6e,
+//     'dark': #111
+//   ),
+//   'background': (
+//     'base': #f8f5f5,
+//     'light': #fff,
+//     'dark': #ddd
+//   )
+// );
 
 /// Relative or absolute URL where all assets are served from
 $base-url: '/assets/' !default;
