--- a/assets/styles/components/_about.scss
+++ b/assets/styles/components/_about.scss
@@ -2,20 +2,20 @@
     margin-bottom: 60px;
     // letter-spacing: 0.05em;
     h2 {
-        color: $base;
+        color: $para-color;
         font-size: 44px;
         font-weight: 660;
     }
 
     h4 {
-        color: $base;
+        color: $para-color;
         font-size: 16px;
         margin-bottom: 0;
     }
     
     p {
         font-size: 14px;
-        color: $light-gray;
+        color: $para-color;
         line-height: 2;
         margin: 24px 0;
     }
