Latest build with some corrections

--- a/assets/styles/common.scss
+++ b/assets/styles/common.scss
@@ -55,7 +55,9 @@
 }
 
 @media screen and (max-width: 767px){
-    
+    .left{
+        padding-top: 40%;
+    }
 }
 
 @media screen and (min-width: 992px) {
