--- a/assets/styles/base/_base.scss
+++ b/assets/styles/base/_base.scss
@@ -31,8 +31,8 @@ h1, h2, h3, h4, h5, h6{
 }
 
 #main{
-    min-height: 100vh;
     height: 100vh;
+    padding-top: 68px;
 }
 
 .justify-content-center{
