--- a/assets/styles/base/_base.scss
+++ b/assets/styles/base/_base.scss
@@ -1,9 +1,3 @@
-html, body {
-    margin: 0 auto;
-    padding: 0;
-    width: 100%;
-}
-
 body {
     height: 100%;
     font-family: 'Poppins', sans-serif;
@@ -238,6 +232,6 @@ h3 {
     z-index: 1;
 }
 
-.animated, .slideOutRight {
-    overflow-x: hidden;
-}
+// .animated, .slideOutRight {
+//     overflow-x: hidden;
+// }
