--- a/assets/styles/components/_main-header.scss
+++ b/assets/styles/components/_main-header.scss
@@ -22,6 +22,7 @@
     margin: 0 20px 0 0;
     color: $base !important;
     display: inline-block;
+    cursor: pointer;
     &:focus,
     &:hover {
       color: rgba(255,255,255,.75);
@@ -45,4 +46,57 @@
 
 ul.ml-auto {
   margin: 8px;
+}
+
+.dropdown-menu{
+  padding: 0px;
+  left: -50px;
+  background-color: $white;
+  background-clip: unset;
+  a{
+    color: $black;
+    background-color: $white;
+    &:first-child{  
+      border-top-left-radius: 0.25rem;
+      border-bottom-left-radius: 0.25rem;
+    }
+    &:last-child{  
+      border-top-right-radius: 0.25rem;
+      border-bottom-right-radius: 0.25rem;
+    }
+    &:hover{
+      color: $white !important;
+      background-color: $link-hover !important;
+    }
+  }
+  // a:first-child{
+  //   border-right: 1px solid $white;
+  // }
+}
+
+.dropdown-menu::before{
+  display: inline-block;
+  position: absolute;
+  margin-left: 0.255em;
+  top: -6px;
+  left: 45%;
+  vertical-align: 0.255em;
+  content: "";
+  color: #fff;
+  border-top: 0;
+  border-right: 0.4em solid transparent;
+  border-bottom: 0.4em solid;
+  border-left: 0.4em solid transparent;
+}
+
+.dropdown-toggle::after{
+  color: $white;
+  margin-right: 14px;
+  margin-left: -22px;
+  vertical-align: 0.1em;
+}
+
+.dropdown-menu.show{
+  top: 2.3em;
+  display: inline-flex;
 }
