New Build files

--- a/assets/styles/base/_base.scss
+++ b/assets/styles/base/_base.scss
@@ -1,5 +1,6 @@
 body {
     background-color: $body-background;
+    color: $base;
 }
 
 h1, h2, h3, h4, h5, h6{
@@ -23,7 +24,7 @@ h1, h2, h3, h4, h5, h6{
     align-items: center!important;
 }
 .highlight{
-    color: $link;
+    color: $link !important;
 }
 
 .abouthighlight {
@@ -87,7 +88,7 @@ i{
 
     .btn-primary,
     .btn-secondary{
-        padding: 16px 30px;
+        padding: 16px 34px;
         border-radius: 0;
         border: 1px;
         border-style: solid;
@@ -211,4 +212,37 @@ i{
 
 .animated, .slideOutRight {
     overflow-x: hidden;
+}
+
+.top-buffer-120 {
+    padding-top: 120px;
+}
+
+.top-buffer-60 {
+    padding-top: 60px;
+}
+
+.fa:before{
+    width: 14px;
+    height: 14px;
+}
+
+.accordion{
+    width: 100%;
+    .card{
+        padding: 10px;
+        background-color: #3c3c3c;
+        .card-header{
+            padding: 0;
+            background: transparent;
+            border: none;
+            button{
+                color: $base;
+                background: transparent;
+            }
+        }
+        .card-body{
+            padding: 0;
+        }
+    }
 }
