--- a/assets/styles/common.scss
+++ b/assets/styles/common.scss
@@ -33,7 +33,7 @@
     }
 
     .btn-secondary {
-        margin-left: 20px;
+        margin-left: 24px;
     }
     
     .homepage {
@@ -46,10 +46,12 @@
     .btn-secondary:focus, .btn-secondary.focus{
         box-shadow: 0 0 0 0.1rem $btn-sec-hov;
     }
+
     .btn-primary:focus, .btn-primary.focus,
     .btn-primary:not(:disabled):not(.disabled):active:focus{
         box-shadow: 0 0 0 0.1rem $btn-pri-hov;
     }
+
     .wrapper {
         width: 100%;
         margin: 0 auto;
@@ -57,17 +59,23 @@
         min-height: 100vh;
         overflow: hidden;
     }
+
     .vertical-center {
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
         left: 10%;
     }
+    
+    .col-md {
+        padding: 0px !important;
+    }
 }
 
 @media screen and (max-width: 767px){
     .left{
-        padding-top: 22%;
+        text-align: left;
+        padding-top: 50%;
     }
     .homepage .btn-primary:active,
     .homepage .btn-primary:focus,
@@ -76,6 +84,19 @@
     .btn-secondary:not(:disabled):not(.disabled):active:focus,
     .btn-secondary:focus, .btn-secondary.focus{
         box-shadow: none !important;
+    }
+    .accordion {
+        .card{
+            .card-header{
+                button{
+                    padding-left: 5px;
+                }
+            }
+            .card-body{
+                border-top: 1px solid $base;
+                padding: 10px;
+            }
+        }
     }
 }
 
@@ -97,6 +118,32 @@
 
     .navbar {
         padding: 0.5rem 4rem;
+    }
+
+    .accordion{
+        .card{
+            display: inline-block;
+            width: 100%;
+            .collapse.show,
+            .card-header{
+                display: -webkit-inline-flex;
+                display: inline-flex;
+            }
+            .card-header{
+                width: 20%;
+            }
+            .collapse.show{
+                width: 80%;
+                padding: 0 20px;
+            }
+            .collapsing{
+                display: none;
+            }
+        }
+    }
+
+    .top-buffer-120 {
+        padding-top: 50px !important;
     }
 }
 
