--- a/assets/styles/common.scss
+++ b/assets/styles/common.scss
@@ -107,6 +107,10 @@
     
     .about {
         margin-bottom: 0;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        left: 10%;
     }
 
     .hidden-lg{
