--- a/assets/styles/common.scss
+++ b/assets/styles/common.scss
@@ -8,7 +8,7 @@
 @import
     'components/main-header',
     'components/about',
-    'components/posts';
+    'components/blog';
 
 @media screen and (max-width: 375px){
     .left{
